--- a/assets/style.css
+++ b/assets/style.css
@@ -13,8 +13,11 @@ body,
 }
 
 body {
-  font-family: sans-serif;
-  background-color: #f9fbfd;
+  text-align: center;
+  background-image: url("background.jpg");
+  background-size: auto;
+  background-color: #707070;
+  font-family:  'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif ;
 }
 
 .wrapper {
@@ -46,7 +49,7 @@ header {
   content: " ";
   display: block;
   width: 100%;
-  background: #e7e9eb;
+  background: #d2d2d3;
   height: 2px;
 }
 
@@ -62,7 +65,7 @@ header {
   content: " ";
   display: block;
   width: 100%;
-  background: #e7e9eb;
+  background: #d2d2d3;
   height: 2px;
 }
 
